# cmake-verilator

./: CMakeLists.txt  README.md  vcpkg.json
rtl/: Alu.v  CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  tb_Alu.cpp  tb_AluTop.cpp
